2023-03-25  James D. Trotter  <james@simula.no>

	* libmtx/util/metis.c (metis_partgraphsym): Fix maximum allowed
	load imbalance to use the default value (up to 3%) instead of 0%.

2023-03-24  James D. Trotter  <james@simula.no>

	* mtxreorder: implement reordering based on graph partitioning
	with METIS.

2023-02-10  James D. Trotter  <james@simula.no>

	* mtxrand: add generator for rectangular block matrices, which is
	sometimes useful as an ideal case for performance testing.

2022-11-28  James D. Trotter  <james@simula.no>

	* libmtx/util/metis.c (metis_nd): fix an issue where nested
	dissection ordering fails for non-square matrices due to missing
	symmetric nonzeros.

2022-10-06  James D. Trotter  <james@simula.no>

	* mtxgemm: program for computing matrix-matrix products

	* mtxrand: program for generating random matrices and vectors

2022-10-05  James D. Trotter  <james@simula.no>

	* libmtx/linalg/blas/dense.c: add matrix-matrix multiplication
	based on BLAS [sd]gemm.

	* libmtx/linalg/base/dense.c: add basic matrix-matrix
	multiplication (gemm)

2022-09-28  James D. Trotter  <james@simula.no>

	* configure.ac: make it easier to select user-defined BLAS library

2022-09-08 James D. Trotter <james@simula.no>

	Implement matrix reordering based on METIS's nested dissection
	algorithm.

2022-04-08 James D. Trotter <james@simula.no>

	Refactor dense vector implementations to have a serial base
	implementation and another implementation with BLAS-accelerated
	operations. Also, add a third implementation to support OpenMP
	shared-memory parallel dense vector operations.

2021-08-05 James D. Trotter <james@simula.no>

	Implement column major sorting for sparse matrices in coordinate
	format.

	Add functions for computing column pointers and row indices.

2021-08-02 James D. Trotter <james@simula.no>

	Implement several new commands, including mtxscal, mtxaxpy, mtxdot
	and mtxnrm2. These are based on the corresponding BLAS operations.
