@@ -16,7 +16,7 @@
  * along with Libmtx.  If not, see <https://www.gnu.org/licenses/>.
  *
  * Authors: James D. Trotter <james@simula.no>
- * Last modified: 2023-03-24
+ * Last modified: 2023-03-25
  *
  * Reorder the nonzeros of a sparse matrix and any number of vectors
  * in Matrix Market format according to a specified reordering
@@ -728,10 +728,11 @@ int main(int argc, char *argv[])
 
     bool symmetric;
     int rcm_starting_vertex = args.rcm_starting_vertex;
+    int64_t objval = 0;
     err = mtxfile_reorder(
         &mtxfile, args.ordering, rowperm, rowperminv, colperm, colperminv,
         !args.quiet, &symmetric, &rcm_starting_vertex,
-        args.nparts, rowpartsizes, colpartsizes,
+        args.nparts, rowpartsizes, colpartsizes, &objval,
         args.verbose > 1 ? args.verbose-1 : 0);
     if (err) {
         if (args.verbose > 0) fprintf(diagf, "\n");
@@ -747,8 +748,10 @@ int main(int argc, char *argv[])
 
     if (args.verbose > 0) {
         clock_gettime(CLOCK_MONOTONIC, &t1);
-        fprintf(diagf, "%'.6f seconds\n",
-                timespec_duration(t0, t1));
+        fprintf(diagf, "%'.6f seconds", timespec_duration(t0, t1));
+        if (args.ordering == mtxfile_metis)
+            fprintf(diagf, ", edge-cut: %'"PRId64, objval);
+        fprintf(diagf, "\n");
     }
 
     /* 4. Write the reordered matrix to standard output. */
@@ -763,6 +766,10 @@ int main(int argc, char *argv[])
             err = mtxfilecomments_printf(
                 &mtxfile.comments, "%% This file was generated by %s %s (%s, starting vertex %'d)\n",
                 program_name, program_version, mtxfileorderingstr(args.ordering), rcm_starting_vertex);
+        } else if (args.ordering == mtxfile_metis) {
+            err = mtxfilecomments_printf(
+                &mtxfile.comments, "%% This file was generated by %s %s (%s, edge-cut: %'"PRId64")\n",
+                program_name, program_version, mtxfileorderingstr(args.ordering), objval);
         } else {
             err = mtxfilecomments_printf(
                 &mtxfile.comments, "%% This file was generated by %s %s (%s)\n",
